Refactor manifest.json for improved configuration
Updated manifest.json to streamline app description, adjust start URL, and modify service worker settings. Removed unnecessary permissions and features for a cleaner configuration.

--- a/manifest.json
+++ b/manifest.json
@@ -1,442 +1,80 @@
 {
   "name": "Espace Parent - CS La Colombe",
   "short_name": "CS Parent",
-  "description": "Application de suivi scolaire avec notifications temps réel même quand l'app est fermée",
-  "start_url": "index.html",
+  "description": "Notifications temps réel - Même app fermée",
+  "start_url": "./index.html?source=pwa",
+  "scope": "./",
   "display": "standalone",
-  "display_override": ["standalone", "minimal-ui", "fullscreen"],
+  "display_override": ["standalone", "minimal-ui"],
   "background_color": "#3498db",
   "theme_color": "#3498db",
-  "orientation": "portrait",
-  "scope": "/",
+  "orientation": "portrait-primary",
   "lang": "fr-FR",
   "dir": "ltr",
-  "categories": ["education", "productivity"],
   
-  // === VERSION ET IDENTIFICATION ===
-  "version": "2.5.0",
-  "version_name": "Notifications Arrière-plan",
-  "id": "/?source=pwa",
+  // === VERSION ===
+  "version": "3.0.0",
+  "id": "/",
   
-  // === SERVICE WORKER POUR NOTIFICATIONS ARRIÈRE-PLAN ===
+  // === SERVICE WORKER POUR BACKGROUND ===
   "background": {
-    "service_worker": "sw-background.js",
-    "type": "module",
-    "persistent": true,
-    "scripts": ["sw-background.js"]
+    "service_worker": "firebase-messaging-sw.js",
+    "type": "module"
   },
   
-  // === PERMISSIONS ESSENTIELLES POUR ARRIÈRE-PLAN ===
+  // === PERMISSIONS ABSOLUMENT NÉCESSAIRES ===
   "permissions": [
     "notifications",
     "background",
-    "background-sync",
-    "periodic-background-sync",
-    "idle",
-    "storage",
-    "clipboard-read",
-    "clipboard-write"
+    "background-sync"
   ],
   
-  // === FONCTIONNALITÉS ACTIVÉES ===
-  "features": [
-    "background-sync",
-    "periodic-background-sync",
-    "push",
-    "idle-detection",
-    "share"
-  ],
-  
-  // === FIREBASE PUSH NOTIFICATIONS ===
+  // === FIREBASE PUSH (ESSENTIEL) ===
   "gcm_sender_id": "103953800507",
   "gcm_user_visible_only": true,
   
-  // VAPID KEY pour notifications Web Push
-  "applicationServerKey": "BFc44CIL4VykUiY8_17s_HbUm5pRqhNhlFcy35H0XKuyFIq-2472MTfMZBfKMxW81DCHTkRB4xy_WaH-f3Ik2TM",
-  
-  // === ICÔNES PWA COMPLÈTES ===
+  // === ICÔNES MINIMALES MAIS REQUISES ===
   "icons": [
     {
-      "src": "icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-72x72.png",
+      "src": "./icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png",
-      "purpose": "any maskable badge"
-    },
-    {
-      "src": "icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-192x192.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable badge"
     },
     {
-      "src": "icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512x512.png",
+      "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "maskable-icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "maskable-icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
   
-  // === SPLASH SCREEN POUR ANDROID/IOS ===
+  // === SPLASH SCREEN ===
   "splash_pages": null,
-  "splash_screen": {
-    "background_color": "#3498db",
-    "image": "splash-640x1136.png",
-    "image_dark": "splash-dark-640x1136.png",
-    "form_factor": "wide"
-  },
   
-  // === ÉCRANS DE PRÉSENTATION PWA STORES ===
-  "screenshots": [
-    {
-      "src": "screenshots/dashboard-phone.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Tableau de bord avec notifications"
-    },
-    {
-      "src": "screenshots/notifications-phone.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Notifications temps réel"
-    },
-    {
-      "src": "screenshots/grades-phone.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Notes et cotes"
-    }
-  ],
-  
-  // === RACCOURCIS PWA (ACCÈS RAPIDE) ===
+  // === SHORTCUTS SIMPLES ===
   "shortcuts": [
     {
       "name": "Tableau de bord",
       "short_name": "Dashboard",
-      "description": "Accéder au tableau de bord principal",
-      "url": "/?shortcut=dashboard",
-      "icons": [{ "src": "icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Nouvelles notes",
-      "short_name": "📊 Notes",
-      "description": "Voir les dernières notes publiées",
-      "url": "/?page=grades&filter=new",
-      "icons": [{ "src": "icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Incidents urgents",
-      "short_name": "⚠️ Incidents",
-      "description": "Consulter les incidents signalés",
-      "url": "/?page=presence-incidents&filter=urgent",
-      "icons": [{ "src": "icon-96x96.png", "sizes": "96x96" }]
+      "description": "Tableau de bord",
+      "url": "./index.html?page=dashboard"
     },
     {
       "name": "Notifications",
       "short_name": "🔔 Alertes",
-      "description": "Voir toutes les notifications",
-      "url": "/?page=notifications",
-      "icons": [{ "src": "icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Communiqués",
-      "short_name": "📄 Paiements",
-      "description": "Voir les communiqués de paiement",
-      "url": "/?page=communiques",
-      "icons": [{ "src": "icon-96x96.png", "sizes": "96x96" }]
+      "description": "Notifications",
+      "url": "./index.html?page=notifications"
     }
   ],
   
-  // === PROTOCOLE PERSONNALISÉ ===
-  "protocol_handlers": [
-    {
-      "protocol": "web+cslacolombe",
-      "url": "/?protocol=%s"
-    }
-  ],
-  
-  // === PARTAGE DE CONTENU ===
-  "share_target": {
-    "action": "/?action=share",
-    "method": "GET",
-    "enctype": "application/x-www-form-urlencoded",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  },
-  
-  // === GESTIONNAIRE DE FICHIERS ===
-  "file_handlers": [
-    {
-      "action": "/?action=upload",
-      "accept": {
-        "application/pdf": [".pdf"],
-        "image/*": [".png", ".jpg", ".jpeg", ".gif"],
-        "application/msword": [".doc", ".docx"]
-      }
-    }
-  ],
-  
-  // === LAUNCH HANDLER POUR GESTION DES FENÊTRES ===
-  "launch_handler": {
-    "client_mode": "focus-existing",
-    "route_to": "existing-client-navigate"
-  },
-  
-  // === TAILLE MINIMALE DE FENÊTRE ===
-  "window_controls_overlay": {
-    "title_color": "#ffffff",
-    "icon_color": "#3498db",
-    "background_color": "#3498db",
-    "enabled": true
-  },
-  
-  // === CONFIGURATION SPÉCIFIQUE ANDROID ===
-  "android_package_name": "com.cslacolombe.parent",
+  // === CONFIGURATION ANDROID/IOS ===
   "prefer_related_applications": false,
-  
-  // === CONFIGURATION SPÉCIFIQUE IOS ===
-  "apple": {
-    "webAppCapable": true,
-    "webAppStatusBarStyle": "black-translucent",
-    "touchIcon": "icon-192x192.png",
-    "precomposedTouchIcon": "icon-192x192.png"
-  },
-  
-  // === CONFIGURATION MICROSOFT ===
-  "microsoft": {
-    "tileColor": "#3498db",
-    "tileImage": "icon-144x144.png",
-    "badge": "icon-72x72.png"
-  },
-  
-  // === CONFIGURATION TWITTER ===
-  "twitter": {
-    "card": "summary_large_image",
-    "site": "@cslacolombe",
-    "creator": "@cslacolombe"
-  },
-  
-  // === CONFIGURATION FACEBOOK ===
-  "facebook": {
-    "app_id": "YOUR_FACEBOOK_APP_ID"
-  },
-  
-  // === OPTIONS AVANCÉES ===
-  "prefer_related_applications": false,
-  "related_applications": [
-    {
-      "platform": "play",
-      "id": "com.cslacolombe.parent",
-      "url": "https://play.google.com/store/apps/details?id=com.cslacolombe.parent"
-    },
-    {
-      "platform": "itunes",
-      "id": "id123456789",
-      "url": "https://apps.apple.com/app/id123456789"
-    }
-  ],
-  
-  // === CONFIGURATION OFFLINE ===
-  "offline_enabled": true,
-  
-  // === CONFIGURATION CACHE ===
-  "cache_busting": {
-    "mode": "version",
-    "value": "2.5.0"
-  },
-  
-  // === NOTIFICATIONS SYSTÈME ===
-  "notification": {
-    "badge": "icon-72x72.png",
-    "icon": "icon-192x192.png",
-    "sound": "notification.mp3",
-    "vibrate": [200, 100, 200],
-    "actions": [
-      {
-        "action": "view",
-        "title": "👁️ Voir"
-      },
-      {
-        "action": "dismiss",
-        "title": "❌ Fermer"
-      },
-      {
-        "action": "snooze",
-        "title": "⏰ Rappeler plus tard"
-      }
-    ]
-  },
-  
-  // === PERMISSIONS DÉTAILLÉES ===
-  "optional_permissions": [
-    "camera",
-    "microphone",
-    "geolocation"
-  ],
-  
-  // === CONFIGURATION DE SÉCURITÉ ===
-  "content_security_policy": {
-    "default-src": ["'self'", "https://*.firebaseio.com", "https://*.googleapis.com"],
-    "script-src": ["'self'", "'unsafe-inline'", "'unsafe-eval'", "https://*.googleapis.com", "https://www.gstatic.com"],
-    "style-src": ["'self'", "'unsafe-inline'", "https://cdnjs.cloudflare.com"],
-    "img-src": ["'self'", "data:", "https:", "blob:"],
-    "connect-src": ["'self'", "https://*.firebaseio.com", "https://*.googleapis.com", "wss://*.firebaseio.com"],
-    "font-src": ["'self'", "https://cdnjs.cloudflare.com"],
-    "media-src": ["'self'", "data:"],
-    "object-src": ["'none'"],
-    "frame-src": ["'none'"],
-    "worker-src": ["'self'", "blob:"],
-    "manifest-src": ["'self'"],
-    "form-action": ["'self'"],
-    "base-uri": ["'self'"],
-    "frame-ancestors": ["'none'"],
-    "block-all-mixed-content": true,
-    "upgrade-insecure-requests": true
-  },
-  
-  // === PRÉFÉRENCES UTILISATEUR ===
-  "user_preferences": {
-    "color_scheme": "light dark",
-    "reduced_motion": "no-preference",
-    "reduced_transparency": "no-preference"
-  },
-  
-  // === INDEXATION CONTENT ===
-  "content_indexing": {
-    "enabled": true,
-    "scope": "/"
-  },
-  
-  // === CONFIGURATION DE LANCEMENT ===
-  "launch": {
-    "location": "standalone",
-    "size": {
-      "width": 414,
-      "height": 736
-    }
-  },
-  
-  // === CONFIGURATION INSTALLATION ===
-  "install": {
-    "description": "Application de suivi scolaire avec notifications temps réel",
-    "screens": 5,
-    "features": [
-      "Notifications en arrière-plan",
-      "Travail hors ligne",
-      "Raccourcis d'application",
-      "Synchronisation automatique"
-    ],
-    "categories": ["education"],
-    "icons": ["icon-192x192.png", "icon-512x512.png"]
-  },
-  
-  // === OPTIONS DE DÉVELOPPEMENT ===
-  "developer": {
-    "name": "CS La Colombe",
-    "url": "https://cslacolombe.edu"
-  },
-  
-  // === CONFIGURATION DE SERVICE WORKER ===
-  "serviceworker": {
-    "src": "sw-background.js",
-    "scope": "/",
-    "use_cache": true,
-    "update_via_cache": "none"
-  },
-  
-  // === CONFIGURATION DE MISE À JOUR ===
-  "update": {
-    "mode": "auto",
-    "frequency": "hourly"
-  },
-  
-  // === CONFIGURATION RÉSEAU ===
-  "network": {
-    "cors": {
-      "allow": ["https://*.firebaseio.com", "https://*.googleapis.com"]
-    }
-  },
-  
-  // === BADGE CONFIGURATION ===
-  "badge": {
-    "src": "icon-72x72.png",
-    "sizes": "72x72",
-    "type": "image/png"
-  },
-  
-  // === FILE SYSTEM ACCESS ===
-  "file_system_access": false,
-  
-  // === GEOLOCATION ===
-  "geolocation": false,
-  
-  // === MEDIA CAPTURE ===
-  "media_capture": false,
-  
-  // === PAYMENT HANDLER ===
-  "payment_handler": false,
-  
-  // === CONFIGURATION FINALE ===
-  "handle_links": "preferred",
-  "scope_extensions": [],
-  "isolation": "none"
+  "related_applications": []
 }
