--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Espace Parent - CS La Colombe",
   "short_name": "CS Parent",
   "description": "Notifications temps réel - Même app fermée",
-  "start_url": "./index.html?source=pwa",
+  "start_url": "index.html?source=pwa",
   "scope": "./",
   "display": "standalone",
   "display_override": ["standalone", "minimal-ui"],
